--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
     "finalhandler": "^2.1.0",
     "forwarded": "^0.2.0",
     "fresh": "^2.0.0",
@@ -41,6 +42,7 @@
     "gopd": "^1.2.0",
     "has-symbols": "^1.1.0",
     "hasown": "^2.0.2",
+    "helmet": "^8.1.0",
     "http-errors": "^2.0.0",
     "iconv-lite": "^0.6.3",
     "inherits": "^2.0.4",
@@ -52,6 +54,7 @@
     "merge-descriptors": "^2.0.0",
     "mime-db": "^1.54.0",
     "mime-types": "^3.0.1",
+    "morgan": "^1.10.0",
     "ms": "^2.1.3",
     "mysql2": "^3.14.1",
     "negotiator": "^1.0.0",
@@ -84,6 +87,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.17",
